tests/ui/parser/trait-object-lifetime-parens.stderr
error: parenthesized lifetime bounds are not supported
  --> $DIR/trait-object-lifetime-parens.rs:5:21
   |
LL | fn f<'a, T: Trait + ('a)>() {}
   |                     ^^^^ help: remove the parentheses

error: parenthesized lifetime bounds are not supported
  --> $DIR/trait-object-lifetime-parens.rs:8:24
   |
LL |     let _: Box<Trait + ('a)>;
   |                        ^^^^ help: remove the parentheses

error: lifetime in trait object type must be followed by `+`
  --> $DIR/trait-object-lifetime-parens.rs:10:17
   |
LL |     let _: Box<('a) + Trait>;
   |                 ^^

error: aborting due to 3 previous errors

